Fixing Top Bar Alignment

--- a/aboutUs.css
+++ b/aboutUs.css
@@ -75,42 +75,3 @@
 	justify-content: center;
 }
 
-#progressButton {
-	height: 50px;
-	width 150px;
-	float: center;
-	background-color: white;
-	margin-top: 10px;
-	margin-bottom: 200px;
-	color: black;
-	font-size: 24px;
-	text-align: center;
-	border-radius: 12px;
-	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-	display: inline-flex;
-	align-items: center;
-	justify-content: center;
-	line-height: 1;
-	vertical-align: top;
-}
-
-table{
-	border: 1px solid white;
-	font-size: 30px;
-	padding: 5px;
-	margin: auto;
-	margin-top: 10vh;
-
-
-}
-
-th,td {
-	border: 1px solid black;
-	padding-left: 5px;
-	padding-right: 5px;
-}
-
-th {
-	font-weight: bold;
-	
-}
