--- a/recordScreen.css
+++ b/recordScreen.css
@@ -51,24 +51,23 @@
 	float: left;
 }
 
-#pastResults {
+.topBarButton {
 	height: 50px;
 	width 150px;
 	float: right;
 	background-color: white;
-	margin-top: 20px;
+	margin-top: 5px;
 	margin-right: 5px;
 	margin-bottom: 5px;
 	color: black;
 	font-size: 24px;
 	font-color: white;
-	text-align: center;
 	border-radius: 12px;
 	box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 	display: inline-flex;
 	align-items: center;
 	justify-content: center;
-	line-height: 1;
+	vertical-align: middle;
 }
 
 #time {
